# test-project-figure-s-area

./: Makefile  README.md  pyproject.toml  setup.cfg
area/: __init__.py  area.py
area/scripts/: area.py
tests/: test_area.py
