[tool.poetry]
name = "test-code"
version = "0.3.0"
description = ""
authors = ["Selezneva Marina <petrukhina.marina2011@yandex.ru>"]
packages = [
  { include = "area" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
area = "area.scripts.area:main"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"